# BitBurn

./: CurrentProgress.md  LICENSE  README.md  TEST_RUNNER_README.md  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml  windows.yml
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json  test_runner.ps1
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ui.rs
src-tauri/src/platform/: autostart.rs  context_menu.rs  mod.rs
src/test/: setup.ts
